# chatbot

./: pyproject.toml
src/: bot.py
